--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -24,49 +24,55 @@
 
               <div class="mt-8">
                 <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-                    <div>
-                      <label for="username" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">
-                        Nombre de usuario
+                  <div>
+                    <label for="username" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">
+                      Nombre de usuario
+                    </label>
+                    <input
+                      type="text"
+                      name="username"
+                      id="username"
+                      placeholder="Tu nombre"
+                      [(ngModel)]="username"
+                      required
+                      class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                  </div>
+
+                  <div class="mt-6">
+                    <div class="flex justify-between mb-2">
+                      <label for="password" class="text-sm text-gray-600 dark:text-gray-200">
+                        Contraseña
                       </label>
-                      <input 
-                        type="text" 
-                        name="username" 
-                        id="username" 
-                        placeholder="Tu nombre"
-                        [(ngModel)]="username" 
-                        required
-                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                      <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 hover:underline">
+                        He olvidado mi contraseña
+                      </a>
                     </div>
-                  
-                    <div class="mt-6">
-                      <div class="flex justify-between mb-2">
-                        <label for="password" class="text-sm text-gray-600 dark:text-gray-200">
-                          Contraseña
-                        </label>
-                        <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 hover:underline">
-                          He olvidado mi contraseña
-                        </a>
-                      </div>
-                  
-                      <input 
-                        type="password" 
-                        name="password" 
-                        id="password" 
-                        placeholder="Tu contraseña" 
-                        [(ngModel)]="password" 
-                        required
-                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+
+                    <input
+                      type="password"
+                      name="password"
+                      id="password"
+                      placeholder="Tu contraseña"
+                      [(ngModel)]="password"
+                      required
+                      class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                  </div>
+
+                  @if (errorMessage) {
+                    <div class="mt-4 text-red-600">
+                      {{ errorMessage }}
                     </div>
-                  
-                    <div class="mt-6">
-                      <button 
-                        type="submit"
-                        class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-300 transform bg-[#3b9ab8] rounded-lg cursor-pointer hover:bg-[#26738b] focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50">
-                        Iniciar sesión
-                      </button>
-                    </div>
-                  </form>
-                  
+                  }
+
+                  <div class="mt-6">
+                    <button
+                      type="submit"
+                      class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-300 transform bg-[#3b9ab8] rounded-lg cursor-pointer hover:bg-[#26738b] focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50">
+                      Iniciar sesión
+                    </button>
+                  </div>
+                </form>
+
 
                   <p class="mt-6 text-sm text-center text-gray-400">¿No tienes cuenta todavía? <a href="/registro" class="text-[#3b9ab8] focus:outline-none focus:underline hover:underline">Regístrate</a>.</p>
               </div>
