--- a/src/app/login/registro/registro.component.html
+++ b/src/app/login/registro/registro.component.html
@@ -25,32 +25,76 @@
         </div>
 
         <div class="mt-8">
-          <form>
+
+          <form (ngSubmit)="onSubmit()" #registroForm="ngForm">
             <div>
-              <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Email</label>
-              <input type="email" name="email" id="email" placeholder="ejemplo@ejemplo.com"
+              <label for="nombre" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Nombre</label>
+              <input type="text" name="nombre" id="nombre" placeholder="Tu nombre" [(ngModel)]="usuario.nombre" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
             <div class="mt-6">
-              <div class="flex justify-between mb-2">
-                <label for="password" class="text-sm text-gray-600 dark:text-gray-200">Contraseña</label>
-                <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 hover:underline">He olvidado mi
-                  contraseña</a>
-              </div>
-
-              <input type="password" name="password" id="password" placeholder="Tu contraseña"
+              <label for="username" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Nombre de usuario</label>
+              <input type="text" name="username" id="username" placeholder="Tu nombre de usuario" [(ngModel)]="usuario.username" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mt-6">
+              <label for="apellidos" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Apellidos</label>
+              <input type="text" name="apellidos" id="apellidos" placeholder="Tus apellidos" [(ngModel)]="usuario.apellidos" required
+                class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mt-6">
+              <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Email</label>
+              <input type="email" name="email" id="email" placeholder="ejemplo@ejemplo.com" [(ngModel)]="usuario.email" required
+                class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mt-6">
+              <label for="provincia" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Provincia</label>
+              <input type="text" name="provincia" id="provincia" placeholder="Tu provincia" [(ngModel)]="usuario.provincia" required
+                class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mt-6">
+              <label for="localidad" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Localidad</label>
+              <input type="text" name="localidad" id="localidad" placeholder="Tu localidad" [(ngModel)]="usuario.localidad" required
+                class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mt-6">
+              <label for="direccion" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Dirección</label>
+              <input type="text" name="direccion" id="direccion" placeholder="Tu dirección" [(ngModel)]="usuario.direccion" required
+                class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mt-6">
+              <label for="fechaNacimiento" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Fecha de nacimiento</label>
+              <input type="date" name="fechaNacimiento" id="fechaNacimiento" [(ngModel)]="usuario.fechaNacimiento" required
+                class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mt-6">
+              <label for="password" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Contraseña</label>
+              <input type="password" name="password" id="password" placeholder="Tu contraseña" [(ngModel)]="usuario.password" required
+                class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div *ngIf="errorMessage" class="mt-4 text-red-600">
+              {{ errorMessage }}
             </div>
 
             <div class="mt-6">
               <button
-                class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-300 transform bg-[#3b9ab8] rounded-lg cursor-pointer transition-colors duration-300 hover:bg-[#26738b] focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50">
+                type="submit"
+                class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-300 transform bg-[#3b9ab8] rounded-lg cursor-pointer hover:bg-[#26738b] focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50">
                 Registrarme
               </button>
             </div>
-
           </form>
+
+
 
           <p class="mt-6 text-sm text-center text-gray-400">¿Ya tienes cuenta? <a href="/login"
               class="text-[#3b9ab8] focus:outline-none focus:underline hover:underline">Inicia sesion</a>.</p>
