--- a/src/app/login/registro/registro.component.html
+++ b/src/app/login/registro/registro.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
 
-    <div class="flex items-center w-full max-w-md px-6 mx-auto lg:w-2/6">
+    <div class="flex items-center w-full w-full max-w-md px-6 mx-auto lg:w-2/6">
       <div class="flex-1">
         <div class="text-center">
           <div class="flex justify-center mx-auto">
@@ -26,66 +26,68 @@
 
         <div class="mt-8">
 
-          <form (ngSubmit)="onSubmit()" #registroForm="ngForm">
+          <form (ngSubmit)="onSubmit()" #registroForm="ngForm" class="grid grid-cols-2 gap-4">
             <div>
               <label for="nombre" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Nombre</label>
               <input type="text" name="nombre" id="nombre" placeholder="Tu nombre" [(ngModel)]="usuario.nombre" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
-            <div class="mt-6">
+            <div>
               <label for="username" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Nombre de usuario</label>
               <input type="text" name="username" id="username" placeholder="Tu nombre de usuario" [(ngModel)]="usuario.username" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
-            <div class="mt-6">
+            <div>
               <label for="apellidos" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Apellidos</label>
               <input type="text" name="apellidos" id="apellidos" placeholder="Tus apellidos" [(ngModel)]="usuario.apellidos" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
-            <div class="mt-6">
+            <div>
               <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Email</label>
               <input type="email" name="email" id="email" placeholder="ejemplo@ejemplo.com" [(ngModel)]="usuario.email" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
-            <div class="mt-6">
+            <div>
               <label for="provincia" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Provincia</label>
               <input type="text" name="provincia" id="provincia" placeholder="Tu provincia" [(ngModel)]="usuario.provincia" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
-            <div class="mt-6">
+            <div>
               <label for="localidad" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Localidad</label>
               <input type="text" name="localidad" id="localidad" placeholder="Tu localidad" [(ngModel)]="usuario.localidad" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
-            <div class="mt-6">
+            <div>
               <label for="direccion" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Dirección</label>
               <input type="text" name="direccion" id="direccion" placeholder="Tu dirección" [(ngModel)]="usuario.direccion" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
-            <div class="mt-6">
+            <div>
               <label for="fechaNacimiento" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Fecha de nacimiento</label>
               <input type="date" name="fechaNacimiento" id="fechaNacimiento" [(ngModel)]="usuario.fechaNacimiento" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
-            <div class="mt-6">
+            <div>
               <label for="password" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Contraseña</label>
               <input type="password" name="password" id="password" placeholder="Tu contraseña" [(ngModel)]="usuario.password" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
-            <div *ngIf="errorMessage" class="mt-4 text-red-600">
-              {{ errorMessage }}
+            <div class="col-span-2" *ngIf="errorMessage">
+              <div class="mt-4 text-red-600">
+                {{ errorMessage }}
+              </div>
             </div>
 
-            <div class="mt-6">
+            <div class="col-span-2 mt-6">
               <button
                 type="submit"
                 class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-300 transform bg-[#3b9ab8] rounded-lg cursor-pointer hover:bg-[#26738b] focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50">
