--- a/src/app/sections/doctores-recomendados/doctores-recomendados.component.html
+++ b/src/app/sections/doctores-recomendados/doctores-recomendados.component.html
@@ -4,8 +4,8 @@
       <a href="#" class="enlace text-[#3B9AB8]">Ver Todos ></a>
   </div>
   <div class="cont-info-doctors flex flex-wrap justify-between">
-    <app-info-doctor [doctor]="doctor1" class="w-[32%]"></app-info-doctor>
-    <app-info-doctor [doctor]="doctor2" class="w-[32%]"></app-info-doctor>
-    <app-info-doctor [doctor]="doctor3" class="w-[32%]"></app-info-doctor>
+    @for (doctor of doctores; track $index) {
+      <app-info-doctor [doctor]="doctor" class="w-[32%]"></app-info-doctor>
+    }
   </div>
 </div>
