--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -51,6 +51,6 @@
             <p class="font-semibold text-gray-800">Motivo: {{ cita.motivo }}</p>
             <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Documento</a>
         </div>
-        <button class="flex text-red-400 hover:text-red-600  p-2 items-center ">Cancelar</button>
+        <button (click)="cancelarCita(cita.id)" class="flex text-red-400 hover:text-red-600  p-2 items-center ">Cancelar</button>
     </div>
 </div>
