--- a/src/app/navs/user-nav/user-nav.component.html
+++ b/src/app/navs/user-nav/user-nav.component.html
@@ -5,9 +5,12 @@
       @if (hayCitasNoVistas) {
         <span class="absolute top-0 right-1 w-2 h-2 bg-red-500 rounded-full"></span>
       }
-      <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 256 256" class="text-gray-700">
-        <path fill="currentColor" d="M221.8 175.94c-5.55-9.56-13.8-36.61-13.8-71.94a80 80 0 1 0-160 0c0 35.34-8.26 62.38-13.81 71.94A16 16 0 0 0 48 200h40.81a40 40 0 0 0 78.38 0H208a16 16 0 0 0 13.8-24.06M128 216a24 24 0 0 1-22.62-16h45.24A24 24 0 0 1 128 216m-80-32c7.7-13.24 16-43.92 16-80a64 64 0 1 1 128 0c0 36.05 8.28 66.73 16 80Z"/>
-      </svg>
+      <button (click)="abrirModal()" class="relative p-2 bg-transparent rounded-full text-gray-700 hover:text-gray-900">
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 256 256">
+          <path fill="currentColor"
+            d="M221.8 175.94c-5.55-9.56-13.8-36.61-13.8-71.94a80 80 0 1 0-160 0c0 35.34-8.26 62.38-13.81 71.94A16 16 0 0 0 48 200h40.81a40 40 0 0 0 78.38 0H208a16 16 0 0 0 13.8-24.06M128 216a24 24 0 0 1-22.62-16h45.24A24 24 0 0 1 128 216m-80-32c7.7-13.24 16-43.92 16-80a64 64 0 1 1 128 0c0 36.05 8.28 66.73 16 80Z"/>
+        </svg>
+      </button>
     </div>
   </div>
   <div class="flex items-center mr-6">
