--- a/src/app/navs/user-nav/panel-notificaciones/panel-notificaciones.component.html
+++ b/src/app/navs/user-nav/panel-notificaciones/panel-notificaciones.component.html
@@ -1,11 +1,11 @@
 <div
-  *ngIf="mostrarModal"
+(click)="cerrarModal()"
   class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
 >
   <div class="bg-white w-96 rounded-lg shadow-lg">
     <div class="p-4 flex justify-between items-center border-b">
       <h2 class="text-lg font-semibold">Panel de Notificaiones</h2>
-      <button (click)="cerrarModal()" class="text-gray-500 hover:text-gray-700">
+      <button class="text-gray-500 hover:text-gray-700">
         &times;
       </button>
     </div>
