--- a/src/app/navs/user-nav/user-nav.component.html
+++ b/src/app/navs/user-nav/user-nav.component.html
@@ -3,7 +3,7 @@
   <div class="relative mr-6">
     <div class="relative cursor-pointer">
       @if (hayCitasNoVistas) {
-        <span class="absolute top-0 right-1 w-2 h-2 bg-red-500 rounded-full"></span>
+        <span class="absolute top-2 right-3 w-2 h-2 bg-red-500 rounded-full z-10"></span>
       }
       <button (click)="abrirModal()" class="relative p-2 bg-transparent rounded-full text-gray-700 hover:text-gray-900">
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 256 256">
@@ -20,3 +20,6 @@
     <span class="font-bold ml-3 text-lg">{{ usuario.nombre }}</span>
   </div>
 </div>
+@if (isModalNotificacionesActive) {
+  <app-panel-notificaciones (modalCerrado)="cerrarModal($event)" />
+}
