--- a/src/app/sections/doctores-recomendados/doctores-recomendados.component.html
+++ b/src/app/sections/doctores-recomendados/doctores-recomendados.component.html
@@ -1,7 +1,7 @@
 <div class="container-bottom mt-4">
   <div class="container-header flex items-center justify-between mb-4">
       <h3 class="titulos text-2xl font-semibold mb-4">Doctores Recomendados</h3>
-      <a href="#" class="enlace text-[#3B9AB8]">Ver Todos ></a>
+      <a href="/listaDoctores" class="enlace text-[#3B9AB8]">Ver Todos ></a>
   </div>
   <div class="cont-info-doctors flex flex-wrap justify-between">
     @for (doctor of doctores; track $index) {
