--- a/src/app/navs/citas-nav/citas-nav.component.html
+++ b/src/app/navs/citas-nav/citas-nav.component.html
@@ -10,7 +10,7 @@
               <option value="feb">Feb</option>
               <!-- <option value="mar">Mar</option> -->
           </select>
-          <a href="listaDoctores" class="flex items-center bg-[#3B9AB8] text-white px-7 py-3 rounded-md"><svg
+          <a href="/listaDoctores" class="flex items-center bg-[#3B9AB8] text-white px-7 py-3 rounded-md"><svg
                   xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                   <path fill="currentColor"
                       d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
