--- a/src/app/sections/lista-citas/lista-citas.component.html
+++ b/src/app/sections/lista-citas/lista-citas.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white shadow-lg rounded-lg p-6">
     <div class="flex items-center justify-between mb-2">
-        <span class="text-lg font-semibold w-full p-3 mb-4 rounded-md bg-[#EEEEEE]">Febrero 2025</span>
+        <span class="text-lg font-semibold w-full p-3 mb-4 rounded-md bg-[#EEEEEE]">{{ getCurrentMonthYear() }}</span>
     </div>
     <div *ngFor="let cita of citasMostradas">
         <app-cita [cita]="cita"></app-cita>
